parser.output
Terminals unused in grammar

    ALIAS
    BREAK
    CASE
    ENSURE
    MODULE
    NEXT
    REDO
    RESCUE
    RETRY
    SUPER
    UNDEF
    UNLESS
    WHEN
    YIELD
    RECEIVER_EQL_OP
    OBJ_ID_EQL_OP
    OPEN_CURLY_BRACKET
    CLOSE_CURLY_BRACKET
    COMMERCIAL_AT
    QUESTION_SYMBOL
    COLON_SYMBOL
    DOUBLE_COLON_SYMBOL
    CLASS_VAR_NAME


Grammar

    0 $accept: program $end

    1 program: program_items_list

    2 program_item: stmt
    3             | def_method_stmt
    4             | class_declaration

    5 program_items_list: program_item
    6                   | program_items_list program_item

    7 expr: INTEGER_NUMBER
    8     | FLOAT_NUMBER
    9     | STRING
   10     | NIL
   11     | TRUE
   12     | FALSE
   13     | LOGICAL_NOT_OP expr
   14     | BIN_ONES_COMPLEMENT_OP expr
   15     | ARITHMETIC_PLUS_OP expr
   16     | expr ARITHMETIC_POW_OP expr
   17     | ARITHMETIC_MINUS_OP expr
   18     | expr ARITHMETIC_MUL_OP expr
   19     | expr ARITHMETIC_DIV_OP expr
   20     | expr ARITHMETIC_MOD_OP expr
   21     | expr ARITHMETIC_PLUS_OP expr
   22     | expr ARITHMETIC_MINUS_OP expr
   23     | expr BIN_LEFT_SHIFT_OP expr
   24     | expr BIN_RIGHT_SHIFT_OP expr
   25     | expr BIN_AND_OP expr
   26     | expr BIN_OR_OP expr
   27     | expr BIN_XOR_OP expr
   28     | expr GREATER_OP expr
   29     | expr LESS_OP expr
   30     | expr GREATER_OR_EQL_OP expr
   31     | expr LESS_OR_EQL_OP expr
   32     | expr COMB_COMPRASION_OP expr
   33     | expr EQL_OP expr
   34     | expr CASE_EQL_OP expr
   35     | expr NOT_EQL_OP expr
   36     | expr LOGICAL_AND_OP expr
   37     | expr LOGICAL_OR_OP expr
   38     | expr INCLUSIVE_RANGE_OP expr
   39     | expr EXCLUSIVE_RANGE_OP expr
   40     | expr ASSIGN_OP expr
   41     | expr MOD_ASSIGN_OP expr
   42     | expr DIV_ASSIGN_OP expr
   43     | expr SUB_ASSIGN_OP expr
   44     | expr ADD_ASSIGN_OP expr
   45     | expr MUL_ASSIGN_OP expr
   46     | expr POW_ASSIGN_OP expr
   47     | expr UNTIL expr
   48     | expr WHILE expr
   49     | DEFINED expr
   50     | NOT expr
   51     | expr AND expr
   52     | expr OR expr
   53     | OPEN_ROUND_BRACKET expr CLOSE_ROUND_BRACKET
   54     | expr OPEN_SQUARE_BRACKET expr CLOSE_SQUARE_BRACKET
   55     | OPEN_SQUARE_BRACKET new_lines expr_list CLOSE_SQUARE_BRACKET
   56     | VAR_OR_METHOD_NAME OPEN_ROUND_BRACKET new_lines expr_list CLOSE_ROUND_BRACKET
   57     | VAR_OR_METHOD_NAME
   58     | INSTANCE_VAR_NAME
   59     | expr DOT_SYMBOL VAR_OR_METHOD_NAME
   60     | expr DOT_SYMBOL VAR_OR_METHOD_NAME OPEN_ROUND_BRACKET expr_list CLOSE_ROUND_BRACKET
   61     | SELF DOT_SYMBOL VAR_OR_METHOD_NAME
   62     | SELF DOT_SYMBOL VAR_OR_METHOD_NAME OPEN_ROUND_BRACKET expr_list CLOSE_ROUND_BRACKET

   63 stmt_ends: SEMICOLON_SYMBOL
   64          | NEW_LINE_SYMBOL
   65          | SEMICOLON_SYMBOL stmt_ends
   66          | NEW_LINE_SYMBOL stmt_ends

   67 new_lines: NEW_LINE_SYMBOL
   68          | NEW_LINE_SYMBOL new_lines

   69 stmt: expr stmt_ends
   70     | stmt_block
   71     | stmt_block stmt_ends
   72     | if_stmt
   73     | if_stmt stmt_ends
   74     | for_stmt
   75     | for_stmt stmt_ends
   76     | while_stmt
   77     | while_stmt stmt_ends
   78     | until_stmt
   79     | until_stmt stmt_ends
   80     | RETURN expr stmt_ends
   81     | RETURN stmt_ends

   82 stmt_list: stmt
   83          | stmt_list stmt

   84 stmt_block: BEGIN stmt_ends stmt_list END

   85 if_start_stmt: IF expr stmt_ends stmt_list
   86              | IF expr SEMICOLON_SYMBOL new_lines THEN stmt_ends stmt_list
   87              | IF expr new_lines THEN stmt_ends stmt_list

   88 elsif_stmt: ELSIF expr stmt_ends stmt_list
   89           | ELSIF expr new_lines THEN stmt_ends stmt_list
   90           | ELSIF expr SEMICOLON_SYMBOL new_lines THEN stmt_ends stmt_list

   91 elsif_stmt_list: elsif_stmt
   92                | elsif_stmt_list elsif_stmt

   93 if_stmt: if_start_stmt END
   94        | if_start_stmt ELSE stmt_ends stmt_list END
   95        | if_start_stmt elsif_stmt_list END
   96        | if_start_stmt elsif_stmt_list ELSE stmt_ends stmt_list END

   97 for_stmt: FOR VAR_OR_METHOD_NAME IN expr stmt_ends stmt_list END
   98         | FOR INSTANCE_VAR_NAME IN expr stmt_ends stmt_list END
   99         | FOR VAR_OR_METHOD_NAME IN expr DO stmt_ends stmt_list END
  100         | FOR INSTANCE_VAR_NAME IN expr DO stmt_ends stmt_list END

  101 while_stmt: WHILE expr stmt_ends stmt_list END
  102           | WHILE expr DO stmt_ends stmt_list END

  103 until_stmt: UNTIL expr stmt_ends stmt_list END
  104           | UNTIL expr DO stmt_ends stmt_list END

  105 method_param: VAR_OR_METHOD_NAME
  106             | VAR_OR_METHOD_NAME ASSIGN_OP expr

  107 method_params_list: method_param
  108                   | method_params_list COMMA_SYMBOL method_param

  109 def_method_stmt: DEF VAR_OR_METHOD_NAME stmt_ends stmt_list END stmt_ends
  110                | DEF VAR_OR_METHOD_NAME OPEN_ROUND_BRACKET method_params_list CLOSE_ROUND_BRACKET stmt_ends stmt_list END stmt_ends

  111 expr_list: expr new_lines
  112          | expr_list COMMA_SYMBOL new_lines expr new_lines

  113 class_declaration: CLASS CLASS_NAME stmt_ends def_method_list END stmt_ends
  114                  | CLASS CLASS_NAME LESS_OP CLASS_NAME stmt_ends def_method_list END stmt_ends

  115 def_method_list: def_method_stmt
  116                | def_method_list def_method_stmt


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ALIAS (258)
    AND (259) 51
    BEGIN (260) 84
    BREAK (261)
    CASE (262)
    CLASS (263) 113 114
    DEF (264) 109 110
    DEFINED (265) 49
    DO (266) 99 100 102 104
    IF (267) 85 86 87
    ELSE (268) 94 96
    ELSIF (269) 88 89 90
    END (270) 84 93 94 95 96 97 98 99 100 101 102 103 104 109 110 113 114
    ENSURE (271)
    FALSE (272) 12
    FOR (273) 97 98 99 100
    IN (274) 97 98 99 100
    MODULE (275)
    NEXT (276)
    NIL (277) 10
    NOT (278) 50
    OR (279) 52
    REDO (280)
    RESCUE (281)
    RETRY (282)
    RETURN (283) 80 81
    SELF (284) 61 62
    SUPER (285)
    THEN (286) 86 87 89 90
    TRUE (287) 11
    UNDEF (288)
    UNLESS (289)
    UNTIL (290) 47 103 104
    WHEN (291)
    WHILE (292) 48 101 102
    YIELD (293)
    ARITHMETIC_PLUS_OP (294) 15 21
    ARITHMETIC_MINUS_OP (295) 17 22
    ARITHMETIC_MUL_OP (296) 18
    ARITHMETIC_DIV_OP (297) 19
    ARITHMETIC_MOD_OP (298) 20
    ARITHMETIC_POW_OP (299) 16
    EQL_OP (300) 33
    NOT_EQL_OP (301) 35
    GREATER_OP (302) 28
    LESS_OP (303) 29 114
    GREATER_OR_EQL_OP (304) 30
    LESS_OR_EQL_OP (305) 31
    COMB_COMPRASION_OP (306) 32
    CASE_EQL_OP (307) 34
    RECEIVER_EQL_OP (308)
    OBJ_ID_EQL_OP (309)
    ASSIGN_OP (310) 40 106
    ADD_ASSIGN_OP (311) 44
    SUB_ASSIGN_OP (312) 43
    MUL_ASSIGN_OP (313) 45
    DIV_ASSIGN_OP (314) 42
    MOD_ASSIGN_OP (315) 41
    POW_ASSIGN_OP (316) 46
    BIN_AND_OP (317) 25
    BIN_OR_OP (318) 26
    BIN_XOR_OP (319) 27
    BIN_ONES_COMPLEMENT_OP (320) 14
    BIN_LEFT_SHIFT_OP (321) 23
    BIN_RIGHT_SHIFT_OP (322) 24
    LOGICAL_AND_OP (323) 36
    LOGICAL_OR_OP (324) 37
    LOGICAL_NOT_OP (325) 13
    INCLUSIVE_RANGE_OP (326) 38
    EXCLUSIVE_RANGE_OP (327) 39
    OPEN_ROUND_BRACKET (328) 53 56 60 62 110
    CLOSE_ROUND_BRACKET (329) 53 56 60 62 110
    OPEN_CURLY_BRACKET (330)
    CLOSE_CURLY_BRACKET (331)
    OPEN_SQUARE_BRACKET (332) 54 55
    CLOSE_SQUARE_BRACKET (333) 54 55
    COMMERCIAL_AT (334)
    QUESTION_SYMBOL (335)
    DOT_SYMBOL (336) 59 60 61 62
    COMMA_SYMBOL (337) 108 112
    COLON_SYMBOL (338)
    DOUBLE_COLON_SYMBOL (339)
    SEMICOLON_SYMBOL (340) 63 65 86 90
    NEW_LINE_SYMBOL (341) 64 66 67 68
    STRING <string_un> (342) 9
    INTEGER_NUMBER <int_un> (343) 7
    FLOAT_NUMBER <float_un> (344) 8
    VAR_OR_METHOD_NAME <var_name_un> (345) 56 57 59 60 61 62 97 99 105 106 109 110
    INSTANCE_VAR_NAME <instance_var_name_un> (346) 58 98 100
    CLASS_VAR_NAME <class_var_name_un> (347)
    CLASS_NAME <class_name_un> (348) 113 114
    UNARY_MINUS (349)
    UNARY_PLUS (350)


Nonterminals, with rules where they appear

    $accept (96)
        on left: 0
    program <program_un> (97)
        on left: 1
        on right: 0
    program_item <program_item_un> (98)
        on left: 2 3 4
        on right: 5 6
    program_items_list <program_item_list_un> (99)
        on left: 5 6
        on right: 1 6
    expr <expr_un> (100)
        on left: 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
        on right: 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 59 60 69 80 85 86 87 88 89 90 97 98 99 100 101 102 103 104 106 111 112
    stmt_ends (101)
        on left: 63 64 65 66
        on right: 65 66 69 71 73 75 77 79 80 81 84 85 86 87 88 89 90 94 96 97 98 99 100 101 102 103 104 109 110 113 114
    new_lines (102)
        on left: 67 68
        on right: 55 56 68 86 87 89 90 111 112
    stmt <stmt_un> (103)
        on left: 69 70 71 72 73 74 75 76 77 78 79 80 81
        on right: 2 82 83
    stmt_list <stmt_list_un> (104)
        on left: 82 83
        on right: 83 84 85 86 87 88 89 90 94 96 97 98 99 100 101 102 103 104 109 110
    stmt_block <block_un> (105)
        on left: 84
        on right: 70 71
    if_start_stmt <if_part_un> (106)
        on left: 85 86 87
        on right: 93 94 95 96
    elsif_stmt <if_part_un> (107)
        on left: 88 89 90
        on right: 91 92
    elsif_stmt_list <elsif_list_un> (108)
        on left: 91 92
        on right: 92 95 96
    if_stmt <stmt_un> (109)
        on left: 93 94 95 96
        on right: 72 73
    for_stmt <stmt_un> (110)
        on left: 97 98 99 100
        on right: 74 75
    while_stmt <stmt_un> (111)
        on left: 101 102
        on right: 76 77
    until_stmt <stmt_un> (112)
        on left: 103 104
        on right: 78 79
    method_param <method_param_un> (113)
        on left: 105 106
        on right: 107 108
    method_params_list <method_param_list_un> (114)
        on left: 107 108
        on right: 108 110
    def_method_stmt <def_method_un> (115)
        on left: 109 110
        on right: 3 115 116
    expr_list <expr_list_un> (116)
        on left: 111 112
        on right: 55 56 60 62 112
    class_declaration <program_item_un> (117)
        on left: 113 114
        on right: 4
    def_method_list <def_method_list_un> (118)
        on left: 115 116
        on right: 113 114 116


State 0

    0 $accept: . program $end

    BEGIN                   shift, and go to state 1
    CLASS                   shift, and go to state 2
    DEF                     shift, and go to state 3
    DEFINED                 shift, and go to state 4
    IF                      shift, and go to state 5
    FALSE                   shift, and go to state 6
    FOR                     shift, and go to state 7
    NIL                     shift, and go to state 8
    NOT                     shift, and go to state 9
    RETURN                  shift, and go to state 10
    SELF                    shift, and go to state 11
    TRUE                    shift, and go to state 12
    UNTIL                   shift, and go to state 13
    WHILE                   shift, and go to state 14
    ARITHMETIC_PLUS_OP      shift, and go to state 15
    ARITHMETIC_MINUS_OP     shift, and go to state 16
    BIN_ONES_COMPLEMENT_OP  shift, and go to state 17
    LOGICAL_NOT_OP          shift, and go to state 18
    OPEN_ROUND_BRACKET      shift, and go to state 19
    OPEN_SQUARE_BRACKET     shift, and go to state 20
    STRING                  shift, and go to state 21
    INTEGER_NUMBER          shift, and go to state 22
    FLOAT_NUMBER            shift, and go to state 23
    VAR_OR_METHOD_NAME      shift, and go to state 24
    INSTANCE_VAR_NAME       shift, and go to state 25

    program             go to state 26
    program_item        go to state 27
    program_items_list  go to state 28
    expr                go to state 29
    stmt                go to state 30
    stmt_block          go to state 31
    if_start_stmt       go to state 32
    if_stmt             go to state 33
    for_stmt            go to state 34
    while_stmt          go to state 35
    until_stmt          go to state 36
    def_method_stmt     go to state 37
    class_declaration   go to state 38


State 1

   84 stmt_block: BEGIN . stmt_ends stmt_list END

    SEMICOLON_SYMBOL  shift, and go to state 39
    NEW_LINE_SYMBOL   shift, and go to state 40

    stmt_ends  go to state 41


State 2

  113 class_declaration: CLASS . CLASS_NAME stmt_ends def_method_list END stmt_ends
  114                  | CLASS . CLASS_NAME LESS_OP CLASS_NAME stmt_ends def_method_list END stmt_ends

    CLASS_NAME  shift, and go to state 42


State 3

  109 def_method_stmt: DEF . VAR_OR_METHOD_NAME stmt_ends stmt_list END stmt_ends
  110                | DEF . VAR_OR_METHOD_NAME OPEN_ROUND_BRACKET method_params_list CLOSE_ROUND_BRACKET stmt_ends stmt_list END stmt_ends

    VAR_OR_METHOD_NAME  shift, and go to state 43


State 4

   49 expr: DEFINED . expr

    DEFINED                 shift, and go to state 4
    FALSE                   shift, and go to state 6
    NIL                     shift, and go to state 8
    NOT                     shift, and go to state 9
    SELF                    shift, and go to state 11
    TRUE                    shift, and go to state 12
    ARITHMETIC_PLUS_OP      shift, and go to state 15
    ARITHMETIC_MINUS_OP     shift, and go to state 16
    BIN_ONES_COMPLEMENT_OP  shift, and go to state 17
    LOGICAL_NOT_OP          shift, and go to state 18
    OPEN_ROUND_BRACKET      shift, and go to state 19
    OPEN_SQUARE_BRACKET     shift, and go to state 20
    STRING                  shift, and go to state 21
    INTEGER_NUMBER          shift, and go to state 22
    FLOAT_NUMBER            shift, and go to state 23
    VAR_OR_METHOD_NAME      shift, and go to state 24
    INSTANCE_VAR_NAME       shift, and go to state 25

    expr  go to state 44


State 5

   85 if_start_stmt: IF . expr stmt_ends stmt_list
   86              | IF . expr SEMICOLON_SYMBOL new_lines THEN stmt_ends stmt_list
   87              | IF . expr new_lines THEN stmt_ends stmt_list

    DEFINED                 shift, and go to state 4
    FALSE                   shift, and go to state 6
    NIL                     shift, and go to state 8
    NOT                     shift, and go to state 9
    SELF                    shift, and go to state 11
    TRUE                    shift, and go to state 12
    ARITHMETIC_PLUS_OP      shift, and go to state 15
    ARITHMETIC_MINUS_OP     shift, and go to state 16
    BIN_ONES_COMPLEMENT_OP  shift, and go to state 17
    LOGICAL_NOT_OP          shift, and go to state 18
    OPEN_ROUND_BRACKET      shift, and go to state 19
    OPEN_SQUARE_BRACKET     shift, and go to state 20
    STRING                  shift, and go to state 21
    INTEGER_NUMBER          shift, and go to state 22
    FLOAT_NUMBER            shift, and go to state 23
    VAR_OR_METHOD_NAME      shift, and go to state 24
    INSTANCE_VAR_NAME       shift, and go to state 25

    expr  go to state 45


State 6

   12 expr: FALSE .

    $default  reduce using rule 12 (expr)


State 7

   97 for_stmt: FOR . VAR_OR_METHOD_NAME IN expr stmt_ends stmt_list END
   98         | FOR . INSTANCE_VAR_NAME IN expr stmt_ends stmt_list END
   99         | FOR . VAR_OR_METHOD_NAME IN expr DO stmt_ends stmt_list END
  100         | FOR . INSTANCE_VAR_NAME IN expr DO stmt_ends stmt_list END

    VAR_OR_METHOD_NAME  shift, and go to state 46
    INSTANCE_VAR_NAME   shift, and go to state 47


State 8

   10 expr: NIL .

    $default  reduce using rule 10 (expr)


State 9

   50 expr: NOT . expr

    DEFINED                 shift, and go to state 4
    FALSE                   shift, and go to state 6
    NIL                     shift, and go to state 8
    NOT                     shift, and go to state 9
    SELF                    shift, and go to state 11
    TRUE                    shift, and go to state 12
    ARITHMETIC_PLUS_OP      shift, and go to state 15
    ARITHMETIC_MINUS_OP     shift, and go to state 16
    BIN_ONES_COMPLEMENT_OP  shift, and go to state 17
    LOGICAL_NOT_OP          shift, and go to state 18
    OPEN_ROUND_BRACKET      shift, and go to state 19
    OPEN_SQUARE_BRACKET     shift, and go to state 20
    STRING                  shift, and go to state 21
    INTEGER_NUMBER          shift, and go to state 22
    FLOAT_NUMBER            shift, and go to state 23
    VAR_OR_METHOD_NAME      shift, and go to state 24
    INSTANCE_VAR_NAME       shift, and go to state 25

    expr  go to state 48


State 10

   80 stmt: RETURN . expr stmt_ends
   81     | RETURN . stmt_ends

    DEFINED                 shift, and go to state 4
    FALSE                   shift, and go to state 6
    NIL                     shift, and go to state 8
    NOT                     shift, and go to state 9
    SELF                    shift, and go to state 11
    TRUE                    shift, and go to state 12
    ARITHMETIC_PLUS_OP      shift, and go to state 15
    ARITHMETIC_MINUS_OP     shift, and go to state 16
    BIN_ONES_COMPLEMENT_OP  shift, and go to state 17
    LOGICAL_NOT_OP          shift, and go to state 18
    OPEN_ROUND_BRACKET      shift, and go to state 19
    OPEN_SQUARE_BRACKET     shift, and go to state 20
    SEMICOLON_SYMBOL        shift, and go to state 39
    NEW_LINE_SYMBOL         shift, and go to state 40
    STRING                  shift, and go to state 21
    INTEGER_NUMBER          shift, and go to state 22
    FLOAT_NUMBER            shift, and go to state 23
    VAR_OR_METHOD_NAME      shift, and go to state 24
    INSTANCE_VAR_NAME       shift, and go to state 25

    expr       go to state 49
    stmt_ends  go to state 50


State 11

   61 expr: SELF . DOT_SYMBOL VAR_OR_METHOD_NAME
   62     | SELF . DOT_SYMBOL VAR_OR_METHOD_NAME OPEN_ROUND_BRACKET expr_list CLOSE_ROUND_BRACKET

    DOT_SYMBOL  shift, and go to state 51


State 12

   11 expr: TRUE .

    $default  reduce using rule 11 (expr)


State 13

  103 until_stmt: UNTIL . expr stmt_ends stmt_list END
  104           | UNTIL . expr DO stmt_ends stmt_list END

    DEFINED                 shift, and go to state 4
    FALSE                   shift, and go to state 6
    NIL                     shift, and go to state 8
    NOT                     shift, and go to state 9
    SELF                    shift, and go to state 11
    TRUE                    shift, and go to state 12
    ARITHMETIC_PLUS_OP      shift, and go to state 15
    ARITHMETIC_MINUS_OP     shift, and go to state 16
    BIN_ONES_COMPLEMENT_OP  shift, and go to state 17
    LOGICAL_NOT_OP          shift, and go to state 18
    OPEN_ROUND_BRACKET      shift, and go to state 19
    OPEN_SQUARE_BRACKET     shift, and go to state 20
    STRING                  shift, and go to state 21
    INTEGER_NUMBER          shift, and go to state 22
    FLOAT_NUMBER            shift, and go to state 23
    VAR_OR_METHOD_NAME      shift, and go to state 24
    INSTANCE_VAR_NAME       shift, and go to state 25

    expr  go to state 52


State 14

  101 while_stmt: WHILE . expr stmt_ends stmt_list END
  102           | WHILE . expr DO stmt_ends stmt_list END

    DEFINED                 shift, and go to state 4
    FALSE                   shift, and go to state 6
    NIL                     shift, and go to state 8
    NOT                     shift, and go to state 9
    SELF                    shift, and go to state 11
    TRUE                    shift, and go to state 12
    ARITHMETIC_PLUS_OP      shift, and go to state 15
    ARITHMETIC_MINUS_OP     shift, and go to state 16
    BIN_ONES_COMPLEMENT_OP  shift, and go to state 17
    LOGICAL_NOT_OP          shift, and go to state 18
    OPEN_ROUND_BRACKET      shift, and go to state 19
    OPEN_SQUARE_BRACKET     shift, and go to state 20
    STRING                  shift, and go to state 21
    INTEGER_NUMBER          shift, and go to state 22
    FLOAT_NUMBER            shift, and go to state 23
    VAR_OR_METHOD_NAME      shift, and go to state 24
    INSTANCE_VAR_NAME       shift, and go to state 25

    expr  go to state 53


State 15

   15 expr: ARITHMETIC_PLUS_OP . expr

    DEFINED                 shift, and go to state 4
    FALSE                   shift, and go to state 6
    NIL                     shift, and go to state 8
    NOT                     shift, and go to state 9
    SELF                    shift, and go to state 11
    TRUE                    shift, and go to state 12
    ARITHMETIC_PLUS_OP      shift, and go to state 15
    ARITHMETIC_MINUS_OP     shift, and go to state 16
    BIN_ONES_COMPLEMENT_OP  shift, and go to state 17
    LOGICAL_NOT_OP          shift, and go to state 18
    OPEN_ROUND_BRACKET      shift, and go to state 19
    OPEN_SQUARE_BRACKET     shift, and go to state 20
    STRING                  shift, and go to state 21
    INTEGER_NUMBER          shift, and go to state 22
    FLOAT_NUMBER            shift, and go to state 23
    VAR_OR_METHOD_NAME      shift, and go to state 24
    INSTANCE_VAR_NAME       shift, and go to state 25

    expr  go to state 54


State 16

   17 expr: ARITHMETIC_MINUS_OP . expr

    DEFINED                 shift, and go to state 4
    FALSE                   shift, and go to state 6
    NIL                     shift, and go to state 8
    NOT                     shift, and go to state 9
    SELF                    shift, and go to state 11
    TRUE                    shift, and go to state 12
    ARITHMETIC_PLUS_OP      shift, and go to state 15
    ARITHMETIC_MINUS_OP     shift, and go to state 16
    BIN_ONES_COMPLEMENT_OP  shift, and go to state 17
    LOGICAL_NOT_OP          shift, and go to state 18
    OPEN_ROUND_BRACKET      shift, and go to state 19
    OPEN_SQUARE_BRACKET     shift, and go to state 20
    STRING                  shift, and go to state 21
    INTEGER_NUMBER          shift, and go to state 22
    FLOAT_NUMBER            shift, and go to state 23
    VAR_OR_METHOD_NAME      shift, and go to state 24
    INSTANCE_VAR_NAME       shift, and go to state 25

    expr  go to state 55


State 17

   14 expr: BIN_ONES_COMPLEMENT_OP . expr

    DEFINED                 shift, and go to state 4
    FALSE                   shift, and go to state 6
    NIL                     shift, and go to state 8
    NOT                     shift, and go to state 9
    SELF                    shift, and go to state 11
    TRUE                    shift, and go to state 12
    ARITHMETIC_PLUS_OP      shift, and go to state 15
    ARITHMETIC_MINUS_OP     shift, and go to state 16
    BIN_ONES_COMPLEMENT_OP  shift, and go to state 17
    LOGICAL_NOT_OP          shift, and go to state 18
    OPEN_ROUND_BRACKET      shift, and go to state 19
    OPEN_SQUARE_BRACKET     shift, and go to state 20
    STRING                  shift, and go to state 21
    INTEGER_NUMBER          shift, and go to state 22
    FLOAT_NUMBER            shift, and go to state 23
    VAR_OR_METHOD_NAME      shift, and go to state 24
    INSTANCE_VAR_NAME       shift, and go to state 25

    expr  go to state 56


State 18

   13 expr: LOGICAL_NOT_OP . expr

    DEFINED                 shift, and go to state 4
    FALSE                   shift, and go to state 6
    NIL                     shift, and go to state 8
    NOT                     shift, and go to state 9
    SELF                    shift, and go to state 11
    TRUE                    shift, and go to state 12
    ARITHMETIC_PLUS_OP      shift, and go to state 15
    ARITHMETIC_MINUS_OP     shift, and go to state 16
    BIN_ONES_COMPLEMENT_OP  shift, and go to state 17
    LOGICAL_NOT_OP          shift, and go to state 18
    OPEN_ROUND_BRACKET      shift, and go to state 19
    OPEN_SQUARE_BRACKET     shift, and go to state 20
    STRING                  shift, and go to state 21
    INTEGER_NUMBER          shift, and go to state 22
    FLOAT_NUMBER            shift, and go to state 23
    VAR_OR_METHOD_NAME      shift, and go to state 24
    INSTANCE_VAR_NAME       shift, and go to state 25

    expr  go to state 57


State 19

   53 expr: OPEN_ROUND_BRACKET . expr CLOSE_ROUND_BRACKET

    DEFINED                 shift, and go to state 4
    FALSE                   shift, and go to state 6
    NIL                     shift, and go to state 8
    NOT                     shift, and go to state 9
    SELF                    shift, and go to state 11
    TRUE                    shift, and go to state 12
    ARITHMETIC_PLUS_OP      shift, and go to state 15
    ARITHMETIC_MINUS_OP     shift, and go to state 16
    BIN_ONES_COMPLEMENT_OP  shift, and go to state 17
    LOGICAL_NOT_OP          shift, and go to state 18
    OPEN_ROUND_BRACKET      shift, and go to state 19
    OPEN_SQUARE_BRACKET     shift, and go to state 20
    STRING                  shift, and go to state 21
    INTEGER_NUMBER          shift, and go to state 22
    FLOAT_NUMBER            shift, and go to state 23
    VAR_OR_METHOD_NAME      shift, and go to state 24
    INSTANCE_VAR_NAME       shift, and go to state 25

    expr  go to state 58


State 20

   55 expr: OPEN_SQUARE_BRACKET . new_lines expr_list CLOSE_SQUARE_BRACKET

    NEW_LINE_SYMBOL  shift, and go to state 59

    new_lines  go to state 60


State 21

    9 expr: STRING .

    $default  reduce using rule 9 (expr)


State 22

    7 expr: INTEGER_NUMBER .

    $default  reduce using rule 7 (expr)


State 23

    8 expr: FLOAT_NUMBER .

    $default  reduce using rule 8 (expr)


State 24

   56 expr: VAR_OR_METHOD_NAME . OPEN_ROUND_BRACKET new_lines expr_list CLOSE_ROUND_BRACKET
   57     | VAR_OR_METHOD_NAME .

    OPEN_ROUND_BRACKET  shift, and go to state 61

    $default  reduce using rule 57 (expr)


State 25

   58 expr: INSTANCE_VAR_NAME .

    $default  reduce using rule 58 (expr)


State 26

    0 $accept: program . $end

    $end  shift, and go to state 62


State 27

    5 program_items_list: program_item .

    $default  reduce using rule 5 (program_items_list)


State 28

    1 program: program_items_list .
    6 program_items_list: program_items_list . program_item

    BEGIN                   shift, and go to state 1
    CLASS                   shift, and go to state 2
    DEF                     shift, and go to state 3
    DEFINED                 shift, and go to state 4
    IF                      shift, and go to state 5
    FALSE                   shift, and go to state 6
    FOR                     shift, and go to state 7
    NIL                     shift, and go to state 8
    NOT                     shift, and go to state 9
    RETURN                  shift, and go to state 10
    SELF                    shift, and go to state 11
    TRUE                    shift, and go to state 12
    UNTIL                   shift, and go to state 13
    WHILE                   shift, and go to state 14
    ARITHMETIC_PLUS_OP      shift, and go to state 15
    ARITHMETIC_MINUS_OP     shift, and go to state 16
    BIN_ONES_COMPLEMENT_OP  shift, and go to state 17
    LOGICAL_NOT_OP          shift, and go to state 18
    OPEN_ROUND_BRACKET      shift, and go to state 19
    OPEN_SQUARE_BRACKET     shift, and go to state 20
    STRING                  shift, and go to state 21
    INTEGER_NUMBER          shift, and go to state 22
    FLOAT_NUMBER            shift, and go to state 23
    VAR_OR_METHOD_NAME      shift, and go to state 24
    INSTANCE_VAR_NAME       shift, and go to state 25

    $default  reduce using rule 1 (program)

    program_item       go to state 63
    expr               go to state 29
    stmt               go to state 30
    stmt_block         go to state 31
    if_start_stmt      go to state 32
    if_stmt            go to state 33
    for_stmt           go to state 34
    while_stmt         go to state 35
    until_stmt         go to state 36
    def_method_stmt    go to state 37
    class_declaration  go to state 38


State 29

   16 expr: expr . ARITHMETIC_POW_OP expr
   18     | expr . ARITHMETIC_MUL_OP expr
   19     | expr . ARITHMETIC_DIV_OP expr
   20     | expr . ARITHMETIC_MOD_OP expr
   21     | expr . ARITHMETIC_PLUS_OP expr
   22     | expr . ARITHMETIC_MINUS_OP expr
   23     | expr . BIN_LEFT_SHIFT_OP expr
   24     | expr . BIN_RIGHT_SHIFT_OP expr
   25     | expr . BIN_AND_OP expr
   26     | expr . BIN_OR_OP expr
   27     | expr . BIN_XOR_OP expr
   28     | expr . GREATER_OP expr
   29     | expr . LESS_OP expr
   30     | expr . GREATER_OR_EQL_OP expr
   31     | expr . LESS_OR_EQL_OP expr
   32     | expr . COMB_COMPRASION_OP expr
   33     | expr . EQL_OP expr
   34     | expr . CASE_EQL_OP expr
   35     | expr . NOT_EQL_OP expr
   36     | expr . LOGICAL_AND_OP expr
   37     | expr . LOGICAL_OR_OP expr
   38     | expr . INCLUSIVE_RANGE_OP expr
   39     | expr . EXCLUSIVE_RANGE_OP expr
   40     | expr . ASSIGN_OP expr
   41     | expr . MOD_ASSIGN_OP expr
   42     | expr . DIV_ASSIGN_OP expr
   43     | expr . SUB_ASSIGN_OP expr
   44     | expr . ADD_ASSIGN_OP expr
   45     | expr . MUL_ASSIGN_OP expr
   46     | expr . POW_ASSIGN_OP expr
   47     | expr . UNTIL expr
   48     | expr . WHILE expr
   51     | expr . AND expr
   52     | expr . OR expr
   54     | expr . OPEN_SQUARE_BRACKET expr CLOSE_SQUARE_BRACKET
   59     | expr . DOT_SYMBOL VAR_OR_METHOD_NAME
   60     | expr . DOT_SYMBOL VAR_OR_METHOD_NAME OPEN_ROUND_BRACKET expr_list CLOSE_ROUND_BRACKET
   69 stmt: expr . stmt_ends
